--- a/app/src/main/res/layout/activity_child_profile.xml
+++ b/app/src/main/res/layout/activity_child_profile.xml
@@ -130,14 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Total Points Earned = 600"
-            android:id="@+id/textView12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Points Lost = 10"
+            android:text="Points Lost Today = 10"
             android:id="@+id/textView13" />
     </LinearLayout>
 
