--- a/app/src/main/res/menu/activity_child_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_child_profile_drawer.xml
@@ -22,7 +22,7 @@
         android:title="Manage">
         <menu>
             <item
-                android:id="@+id/nav_create_chore"
+                android:id="@+id/nav_create_wishlist_item"
                 android:icon="@drawable/ic_menu_star"
                 android:title="Create Wishlist Item" />
             <item
