--- a/app/src/main/res/layout/activity_edit_reward.xml
+++ b/app/src/main/res/layout/activity_edit_reward.xml
@@ -38,7 +38,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Edit Reward"
-        android:id="@+id/button36"
+        android:id="@+id/editRewardButton"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
