--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -33,8 +33,9 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView2"
-            android:layout_gravity="center_horizontal"/>
+            android:id="@+id/allChoresByDayListView"
+            android:layout_gravity="center_horizontal"
+            android:headerDividersEnabled="false"/>
     </LinearLayout>
 
 </RelativeLayout>
