--- a/app/src/main/res/layout/activity_create_chore.xml
+++ b/app/src/main/res/layout/activity_create_chore.xml
@@ -13,14 +13,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Create Chore"
-        android:id="@+id/button3"
+        android:id="@+id/createChoreButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText10"
+        android:id="@+id/choreDescText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -29,8 +29,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText11"
-        android:layout_below="@+id/editText10"
+        android:id="@+id/choreStartText"
+        android:layout_below="@+id/choreDescText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="Start Date" />
@@ -38,8 +38,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText12"
-        android:layout_below="@+id/editText11"
+        android:id="@+id/choreEndText"
+        android:layout_below="@+id/choreStartText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="End Date" />
@@ -48,7 +48,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/editText12"
+        android:layout_below="@+id/choreEndText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout">
