--- a/app/src/main/res/layout/activity_child_login.xml
+++ b/app/src/main/res/layout/activity_child_login.xml
@@ -30,9 +30,12 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
         android:id="@+id/cPasswordText"
         android:layout_below="@+id/cUsernameText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="Enter Password"/>
+
 </RelativeLayout>
