--- a/app/src/main/res/layout/activity_create_parent.xml
+++ b/app/src/main/res/layout/activity_create_parent.xml
@@ -13,51 +13,51 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Create Parent"
-        android:id="@+id/button2"
+        android:id="@+id/createParentButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText6"
+        android:id="@+id/createParentNameText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Name" />
+        android:hint="Enter Name" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
+        android:id="@+id/createParentPasswordText"
+        android:layout_below="@+id/createParentNameText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Password" />
+        android:hint="Enter Password" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText8"
-        android:layout_below="@+id/editText7"
+        android:id="@+id/createParentEmailText"
+        android:layout_below="@+id/createParentPasswordText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="E-mail" />
+        android:hint="Enter Email Address" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
-        android:id="@+id/editText9"
-        android:layout_below="@+id/editText8"
+        android:id="@+id/createParentPhoneText"
+        android:layout_below="@+id/createParentEmailText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Phone #" />
+        android:hint="Enter Phone #" />
 </RelativeLayout>
