--- a/app/src/main/res/layout/activity_create_reward.xml
+++ b/app/src/main/res/layout/activity_create_reward.xml
@@ -15,24 +15,24 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText21"
+            android:id="@+id/createRewardNameText"
             android:hint="Enter Name"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText14"
-            android:layout_below="@+id/editText13"
+            android:id="@+id/createRewardDescText"
+            android:layout_below="@+id/createRewardPointText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:hint="Enter Reward Description" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText13"
+            android:id="@+id/createRewardPointText"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
