--- a/app/src/main/res/layout/activity_edit_reward.xml
+++ b/app/src/main/res/layout/activity_edit_reward.xml
@@ -16,21 +16,21 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText22"
+            android:id="@+id/editRewardNameText"
             android:hint="Enter Name"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText23"
+            android:id="@+id/editRewardDescText"
             android:hint="Enter Description"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText24"
+            android:id="@+id/editRewardPointText"
             android:hint="Enter Point Value"/>
     </LinearLayout>
 
