--- a/app/src/main/res/layout/activity_parent_login.xml
+++ b/app/src/main/res/layout/activity_parent_login.xml
@@ -14,14 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"
-        android:id="@+id/pSignInButton"
+        android:id="@+id/parentSignInButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pUsernameText"
+        android:id="@+id/parentLoginUsernameText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -30,9 +30,12 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pPasswordText"
-        android:layout_below="@+id/pUsernameText"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/parentLoginPasswordText"
+        android:layout_below="@+id/parentLoginUsernameText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="Enter Password"/>
+
 </RelativeLayout>
